# baize-sqlite3

./: Cargo.toml
src/: lib.rs  reg.rs  test.rs
src/tokenize/: jieba.rs  mod.rs  simple.rs
