[package]
name = "baize-sqlite3"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlite3ext-sys = "0"
jieba = { version = "0", package = "jieba-rs", optional = true, default-features = false }
porter-stemmer = { version = "0", optional = true }
unicode-segmentation = "1"
defer-lite = "1"

[dev-dependencies]
rusqlite = { version = "0", features = ["bundled"] }
anyhow = "1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["jieba", "jieba-default-dict", "porter"]
jieba = ["dep:jieba"]
jieba-default-dict = ["jieba/default-dict"]
porter = ["dep:porter-stemmer"]
